確認用のファイル

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <ul>
-    <li><a href="">1</a></li>
+    <li>
+      <a href="./vueJsWithTypeScript/vue-ts-practice/dist/index.html">vue.js + typescript = vue.ts ことはじめ</a>
+      (<a href="https://qiita.com/nrslib/items/be90cc19fa3122266fd7" target="_blank">参考</a>)
+  </li>
   </ul>
-  
 </body>
 </html>
