--- a/vueLearning/index.html
+++ b/vueLearning/index.html
@@ -10,9 +10,12 @@
 <body>
   <div id="app">
     <p>{{message}}</p>
+    <button v-on:click="reversMessage">message反転</button>
+    
     <p>{{number + 2}}</p>
     <p>{{ok ? 'yes': 'no'}}</p>
-    <button v-on:click="reversMessage">message反転</button>
+    <p>{{sayHi()}}</p>
+    
   </div>
 
   <script>
@@ -26,6 +29,9 @@
       methods: {
          reversMessage: function() {
            this.message = this.message.split('').reverse().join('')
+         },
+         sayHi: function() {
+           return 'Hi'
          }
       }
     });
