ディレクティブ:v-text

--- a/vueLearning/index.html
+++ b/vueLearning/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id="app">
     <p>{{message}}</p>
+    <p v-text="message"></p>
     <button v-on:click="reversMessage">message反転</button>
 
     <p>{{number + 2}}</p>
