--- a/vueLearning/index.html
+++ b/vueLearning/index.html
@@ -41,6 +41,9 @@
       座標の1/10の値を表示
       X:{{x}} Y:{{y}}
     </p>
+
+    <p><a v-on:click="preventDefault" href="https://google.com/" >Google:preventDefault</a></p>
+    <p><a v-on:click.prevent href="https://google.com/" >Google:prevent</a></p>
     
     
   </div>
@@ -80,6 +83,9 @@
          },
          noEvent :function(event) {
            event.stopPropagation();
+         },
+         preventDefault: function() {
+           event.preventDefault();
          }
       }
     });
