--- a/vueLearning/02.html
+++ b/vueLearning/02.html
@@ -8,9 +8,17 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <ul>
-    <li><a href="01.html">01</a></li>
-    <li><a href="02.html">02</a></li>
-  </ul>
+  <div id="app">
+  </div>
+
+  <script>
+    new Vue({
+      el: '#app',
+      data: {},
+      computed: {}
+      });
+  
+  </script>
+
 </body>
 </html>
