ウォッチャ

--- a/vueLearning/02.html
+++ b/vueLearning/02.html
@@ -9,13 +9,30 @@
 </head>
 <body>
   <div id="app">
+    <p>count: {{counter}}</p>
+    <button @click="counter += 1">+1</button>
+    <p>{{ lessThanThree }}</p>
   </div>
 
   <script>
     new Vue({
       el: '#app',
-      data: {},
-      computed: {}
+      data: {
+        counter: 0
+      },
+      computed: {
+        lessThanThree: function() {
+         return this.counter > 3 ? '3より上' : '3以下';
+        }
+      },
+      watch: {
+        counter: function() {
+          const vm = this;
+          setTimeout(function(){
+            vm.counter = 0;
+          }, 3000);
+        }
+      }
       });
   
   </script>
