--- a/vueLearning/03.html
+++ b/vueLearning/03.html
@@ -8,10 +8,19 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <ul>
-    <li><a href="01.html">01</a></li>
-    <li><a href="02.html">02</a></li>
-    <li><a href="03.html">03</a></li>
-  </ul>
+  <div id="app">
+    <p v-if="ok">ok</p>
+  </div>
+
+  <script>
+    new Vue({
+      el: '#app',
+      data: {
+        ok: true
+      },
+    });
+  
+  </script>
+
 </body>
 </html>
