--- a/vueLearning/03.html
+++ b/vueLearning/03.html
@@ -10,6 +10,7 @@
 <body>
   <div id="app">
     <p v-if="ok">ok</p>
+    <p v-else-if="maybeOk">maybe</p>
     <p v-else>not ok</p>
   </div>
 
@@ -17,7 +18,8 @@
     new Vue({
       el: '#app',
       data: {
-        ok: false
+        ok: false,
+        maybeOk: true
       },
     });
   
