--- a/vueLearning/03.html
+++ b/vueLearning/03.html
@@ -24,7 +24,7 @@
     
     <hr>
     <ul>
-      <li v-for="number in numbers">{{number}}</li>
+      <li v-for="(number, index) in numbers">{{ index }}/{{ number }}</li>
     </ul>
   </div>
 
