--- a/vueLearning/03.html
+++ b/vueLearning/03.html
@@ -27,7 +27,7 @@
       <li v-for="(number, index) in numbers">{{ index }}/{{ number }}</li>
     </ul>
     <ul>
-      <li v-for="value in object">{{value}}</li>
+      <li v-for="(value, key) in object">{{key}} : {{value}}</li>
     </ul>
   </div>
 
