整数値に対してv-forを適用

--- a/vueLearning/03.html
+++ b/vueLearning/03.html
@@ -29,6 +29,13 @@
     <ul>
       <li v-for="(value, key, index) in object">{{index}} / {{key}} : {{value}}</li>
     </ul>
+
+    <ul>
+      <li v-for="n in 10">{{n}}</li>
+    </ul>
+    <hr>
+
+
   </div>
 
   <script>
