--- a/vueLearning/04.html
+++ b/vueLearning/04.html
@@ -9,22 +9,30 @@
 </head>
 <body>
   <div id="app1">{{message}}</div>
-  <div id="app2">{{message}}</div>
+  <div id="app2">
+    {{message}}
+    <button @click="changeMessage1">インスタンス1を変更</button>
+  </div>
 
   <script>
-    const vm = new Vue({
+    const vm1 = new Vue({
       el: '#app1',
       data: {
         message: 'インスタンス１'
       },
     });
 
-    vm.message = '書き換え';
+    vm1.message = '書き換え';
   
-    new Vue({
+    const vm2 = new Vue({
       el: '#app2',
       data: {
         message: 'インスタンス2'
+      },
+      methods: {
+        changeMessage1: function() {
+          vm1.message ='インスタンス2から変更を加える'
+        }
       }
 
     });
