--- a/vueLearning/04.html
+++ b/vueLearning/04.html
@@ -18,6 +18,7 @@
 
   <div id="app3">
     {{message}}
+    <p>{{mydata}}</p>
   </div>
 
   <script>
@@ -49,7 +50,12 @@
 
     const vm3  = new Vue({
       el: '#app3',
-      data: data
+      data: data,
+      computed: {
+        mydata: function() {
+          return this.$data;
+        }
+      }
     });
 
     // vm3.name = 'なまえ';
