--- a/vueLearning/index.html
+++ b/vueLearning/index.html
@@ -14,6 +14,7 @@
     <li><a href="03.html">03</a></li>
     <li><a href="04.html">04</a></li>
     <li><a href="05.html">05</a></li>
+    <li><a href="06.html">06</a></li>
   </ul>
 </body>
 </html>
