+1ボタン追加

--- a/vueLearning/06.html
+++ b/vueLearning/06.html
@@ -19,7 +19,18 @@
         number: 12
       }
     },
-    template: '<p>like {{number}}</p>'
+    template: `
+      <p>
+        like {{number}}
+        <button @click="increment">+1</button>
+      </p>
+      `,
+    methods: {
+      increment: function() {
+        this.number += 1;
+      }
+    }
+    
   });
   
   new Vue({
